# if-this-then-that

./: pyproject.toml
src/if_this_then_that/api/caldav/: caldav.py
test/if_this_then_that/api/caldav/: test_caldav.py
